удалили tag buttons

--- a/exercises/refactor/index.html
+++ b/exercises/refactor/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <div class="root">
-        <buttons class="buttons">
+        <div class="buttons">
             <button class="button-posts">fetch posts</button>
             <button class="button-users">fetch users</button>
-        </buttons>
+        </div>
 
         <div class="content">
             <div class="posts"></div>
